--- a/src/SettingDialog.ui
+++ b/src/SettingDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QWidget" name="MainWindow">
+ <class>SettingDialog</class>
+ <widget class="QWidget" name="SettingDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -20,7 +20,7 @@
       <number>20</number>
      </property>
      <item>
-      <widget class="QToolButton" name="generalButton">
+      <widget class="QToolButton" name="generalToolButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -52,7 +52,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QToolButton" name="shortcutButton">
+      <widget class="QToolButton" name="shortcutToolButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -84,7 +84,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QToolButton" name="syncButton">
+      <widget class="QToolButton" name="syncToolButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
